- Fix initial title page content being skipped when a user defines a custom bookinfo id. BZ #1165482
- Fix invalid XML being generated for drupal-book, when titles contain reserved chars. BZ #1165438
- Changed the drupal feed <parent> field to use the url value instead of the title. BZ #1165724
- Fix publican.cfg values are used in the feed page <title> tag. BZ #1172402

4.2.6 Tue Oct 21 2014
- Fix External_Links translation not merging. BZ #1153911

4.2.5 Wed Oct 15 2014
- Fix DocBook4 epub failing for ja-JP. BZ #1152780

4.2.4 Tue Oct 14 2014
- Allow External_Links.xml to be translated. BZ #1150386
- Change ja-JP person-name style. BZ #1150866

4.2.3 Tue Oct 7 2014
- Fix DocBook4 entity text, BZ #1143060
- Remove extra white space from non-verbatim msgid's. BZ #1143792
- Fix PDF build using FOP fails with "No numberLines function available." BZ #1143852
- Add allow_network option. Defaults OFF. BZ #1144949
- Add hacks to work around BZ #1144220

4.2.2 Wed Sep 17 2014
- Fix duplicate messages in POT files. BZ #1136133
- Remove top level directory from drupal tar file. BZ #1139070
- Fix PDF font selection. BZ #1139899

4.2.1 Mon Sep 01 2014
- Remove empty msgids from POT files. BZ #1135143
- Fix highlight in callout with areaspec. BZ #1135827

4.2.0 Thu Aug 28 2014
- Add iframe video support to DocBook5 HTML5. BZ #752021
- Stop calculating column width if no width is set. BZ #1084860
- Simply styling of code, and admonitions in HTML5. BZ #1093498
- Added tip formatting. BZ #1033830
- Remove incorrect prompt. BZ #1096544
- Add "popper" to hide program listing after 4 lines. BZ #1088051
- Fix white space being removed from msgids when merging. BZ #1097090
- Add code language switching. BZ #1092351
- Fix CDATA support, bump XML::TreeBuilder dep to 5.3. BZ #1101050
- Add --showfuzzy to build options.
- Move PO manipulation to Locale::PO.
- Fix inline"\n" not working in verbatim. BZ #1097091
- Fix images for DB4 website callouts. BZ #1112899